# ProfilingScanPath

./: .gitignore  README.md  debug_cylinder_path.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  app.py  interference_checker.py  model_normalizer.py  path_planner.py  profile_extractor.py  step_loader.py
data/: __init__.py  models.py
docs/: V1_SRS.md  V1_SRS_full.md  V1_summary.md  V2_0_2_summary.md  V2_0_3_summary.md  V2_0_4_summary.md  V2_0_5_summary.md  V2_0_6_summary.md  V2_GUI_UserGuide.md  V2_summary.md  V3_0_technical_summary.md  ocp_integration_plan.md  v1_spec.md
exporter/: __init__.py  csv_exporter.py
gui/: __init__.py  app.py  controller.py  display_set_window.py  icon_img.rcc  icon_resources.py  main_window.py  window.py
gui/styles/: dark_theme.qss  light_theme.qss
gui/ui/: __init__.py
gui/widgets/: __init__.py  profile_preview_3d_widget.py  (+1 more)
scripts/: debug_cone_path.py  debug_fillet.py  debug_ocp_profile.py  debug_step_profile.py  generate_ocp_fixtures.py  run_gui.py  test_ocp_import.py  test_ocp_step_read.py
tests/: test_cone_path_validation.py  test_cylinder_path_validation.py  test_fillet_transition.py  test_hollow_fixture_gui_integration.py  test_interference_checker.py  test_main.py  test_ocp_cylinder_accuracy.py  test_ocp_profile_extraction.py  test_ocp_step_loader.py  test_path_planner.py  test_profile_geometric_segmentation.py  test_profile_segment_management.py  test_profile_selection.py  test_step_profile_extraction.py
ui/: displaysetwindow.ui  mainwindow.ui  mainwindow1.ui  mainwindow2.ui
(+11 files in other folders)
