[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "profiling-scan-path"
version = "0.1.0"
description = "V1 skeleton for rotational STEP ultrasonic profiling path planning."
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
